--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -10,34 +10,49 @@
         android:id="@+id/juego"
         android:layout_width="353dp"
         android:layout_height="51dp"
+        android:layout_marginStart="187dp"
+        android:layout_marginEnd="191dp"
         android:text="TicTacToe"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="187dp"
-        tools:layout_editor_absoluteY="126dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="MissingConstraints" />
 
     <Button
         android:id="@+id/saludo"
         android:layout_width="354dp"
         android:layout_height="49dp"
+        android:layout_marginStart="188dp"
+        android:layout_marginTop="39dp"
+        android:layout_marginEnd="189dp"
         android:text="Random Greet"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="188dp"
-        tools:layout_editor_absoluteY="216dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/juego"
+        tools:ignore="MissingConstraints" />
 
     <Button
         android:id="@+id/pais"
         android:layout_width="360dp"
         android:layout_height="50dp"
+        android:layout_marginStart="189dp"
+        android:layout_marginTop="71dp"
+        android:layout_marginEnd="182dp"
         android:text="Countries"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="193dp"
-        tools:layout_editor_absoluteY="322dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/spinner"
+        tools:ignore="MissingConstraints" />
 
     <Spinner
         android:id="@+id/spinner"
         android:layout_width="409dp"
         android:layout_height="wrap_content"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="187dp"
-        tools:layout_editor_absoluteY="280dp" />
+        android:layout_marginStart="187dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginEnd="135dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/saludo"
+        tools:ignore="MissingConstraints" />
 </androidx.constraintlayout.widget.ConstraintLayout>
