--- a/app/src/main/res/layout/activity_tic_tac_toe.xml
+++ b/app/src/main/res/layout/activity_tic_tac_toe.xml
@@ -10,7 +10,7 @@
         android:id="@+id/x"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Jugador 1 : X"
+        android:text="@string/jugador_1_x"
         android:textColor="@color/black"
         android:textSize="40sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -69,7 +69,7 @@
         android:layout_marginStart="92dp"
         android:layout_marginTop="430dp"
         android:layout_marginEnd="92dp"
-        android:text="Jugador 2: O"
+        android:text="@string/jugador_2_o"
         android:textSize="40sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -83,6 +83,8 @@
         android:layout_marginTop="36dp"
         android:layout_marginEnd="190dp"
         android:text=" "
+        android:textSize="50sp"
+        android:textColor="@color/Campeon"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/o" />
