--- a/app/src/main/res/layout/activity_info_pais.xml
+++ b/app/src/main/res/layout/activity_info_pais.xml
@@ -1,34 +1,91 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".InfoPaisActivity">
 
+    <!-- TextView: Nombre -->
     <TextView
-        android:id="@+id/textViewpais"
+        android:id="@+id/textViewNombre0"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="124dp"
-        android:layout_marginTop="356dp"
-        android:layout_marginEnd="123dp"
-        android:layout_marginBottom="356dp"
-        android:text="@string/aqui_va_el_nombre_del_pais"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:text="Nombre:"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_marginTop="32dp" />
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/textViewNombre"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="176dp"
-        android:layout_marginEnd="177dp"
-        android:layout_marginBottom="105dp"
-        android:text="otro texto"
-        app:layout_constraintBottom_toTopOf="@+id/textViewpais"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:text="textviewNombre"
+        android:layout_marginStart="8dp"
+        app:layout_constraintTop_toTopOf="@id/textViewNombre0"
+        app:layout_constraintStart_toEndOf="@id/textViewNombre0"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <!-- TextView: Capital -->
+    <TextView
+        android:id="@+id/textViewCapital0"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Capital:"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@id/textViewNombre"
         app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/textViewCapital"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="textviewcapital"
+        android:layout_marginStart="8dp"
+        app:layout_constraintTop_toTopOf="@id/textViewCapital0"
+        app:layout_constraintStart_toEndOf="@id/textViewCapital0"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <!-- TextView: Sigla -->
+    <TextView
+        android:id="@+id/textViewSigla0"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Sigla:"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@id/textViewCapital"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/textViewSigla"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="textviewsigla"
+        android:layout_marginStart="8dp"
+        app:layout_constraintTop_toTopOf="@id/textViewSigla0"
+        app:layout_constraintStart_toEndOf="@id/textViewSigla0"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <!-- TextView: Nombre en inglés -->
+    <TextView
+        android:id="@+id/textViewNombreIngles0"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Nombre en inglés:"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@id/textViewSigla"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/textViewNombreIngles"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:text="textviewNombreIngles"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.432"
+        app:layout_constraintStart_toEndOf="@id/textViewNombreIngles0"
+        app:layout_constraintTop_toTopOf="@id/textViewNombreIngles0" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
